src/metrics/snapshots/big_code_analysis__metrics__npm__tests__cpp_mixed_visibility_methods.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "class_npm_sum": 1,
  "interface_npm_sum": 0,
  "class_methods": 3,
  "interface_methods": 0,
  "class_coa": 0.3333333333333333,
  "interface_coa": 0.0,
  "total": 1,
  "total_methods": 3,
  "coa": 0.3333333333333333
}
