src/metrics/snapshots/big_code_analysis__metrics__npm__tests__csharp_classes.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "classes": 3.0,
  "interfaces": 0.0,
  "class_methods": 5.0,
  "interface_methods": 0.0,
  "class_coa": 0.6,
  "interface_coa": 0.0,
  "total": 3.0,
  "total_methods": 5.0,
  "coa": 0.6
}
