src/metrics/snapshots/big_code_analysis__metrics__npm__tests__csharp_interface.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "classes": 0.0,
  "interfaces": 4.0,
  "class_methods": 0.0,
  "interface_methods": 4.0,
  "class_coa": 0.0,
  "interface_coa": 1.0,
  "total": 4.0,
  "total_methods": 4.0,
  "coa": 1.0
}
