src/metrics/snapshots/big_code_analysis__metrics__npm__tests__csharp_interfaces_and_class.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "class_npm_sum": 1,
  "interface_npm_sum": 3,
  "class_methods": 2,
  "interface_methods": 3,
  "class_coa": 0.5,
  "interface_coa": 1.0,
  "total": 4,
  "total_methods": 5,
  "coa": 0.8
}
