src/metrics/snapshots/big_code_analysis__metrics__npm__tests__csharp_local_functions.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "class_npm_sum": 1,
  "interface_npm_sum": 0,
  "class_methods": 2,
  "interface_methods": 0,
  "class_coa": 0.5,
  "interface_coa": 0.0,
  "total": 1,
  "total_methods": 2,
  "coa": 0.5
}
