src/metrics/snapshots/big_code_analysis__metrics__npm__tests__csharp_method_modifiers.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "class_npm_sum": 3,
  "interface_npm_sum": 0,
  "class_methods": 6,
  "interface_methods": 0,
  "class_coa": 0.5,
  "interface_coa": 0.0,
  "total": 3,
  "total_methods": 6,
  "coa": 0.5
}
