src/metrics/snapshots/big_code_analysis__metrics__npm__tests__csharp_narrowed_accessor_visibility.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "class_npm_sum": 6,
  "interface_npm_sum": 0,
  "class_methods": 10,
  "interface_methods": 0,
  "class_coa": 0.6,
  "interface_coa": 0.0,
  "total": 6,
  "total_methods": 10,
  "coa": 0.6
}
