src/metrics/snapshots/big_code_analysis__metrics__npm__tests__csharp_property_accessors.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "classes": 6,
  "interfaces": 0,
  "class_methods": 8,
  "interface_methods": 0,
  "class_coa": 0.75,
  "interface_coa": 0.0,
  "total": 6,
  "total_methods": 8,
  "coa": 0.75
}
